--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Site Escola</title>
 </head>
 <body>
     <header>
-        <img src="./img/alurastart logo 1.png" alt="logo do alura start">
+        <img class="cabecalho-imagem" src="./img/alurastart logo 1.png" alt="logo do alura start">
         <ul>
             <li>escola</li>
             <li>estudante</li>
