--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site Escola</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header class="cabecalho">
         <img class="cabecalho-imagem" src="./img/alurastart logo 1.png" alt="logo do alura start">
-        <ul>
-            <li>escola</li>
-            <li>estudante</li>
+        <ul class="cabecalho-lista-item">
+            <li class="cabecalho-lista-item">Escola</li>
+            <li class="cabecalho-lista-item">Estudante</li>
         </ul>
     </header>
 </body>
